Fix the z-index values

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -20,16 +20,24 @@ div#renderer {
 	
 	div#canvas {
 		display: block;
-		z-index: 2;
+		
+		canvas {
+			position: relative;
+			z-index: 2;
+		}
 	}
 	
 	div#override {
+		position: absolute;
+		top: 0px;
 		transition: opacity 1s ease-in-out; 
 		-webkit-transition: opacity 1s ease-in-out; 
 		opacity: 0;
 		z-index: 5;
 	  
 		* {
+			position: relative;
+			z-index: 5;
 			display: block;
 			height:unset;
 			max-height: 100%;
@@ -46,6 +54,7 @@ div#renderer {
 		bottom: 0px;
 		
 		canvas {
+			position: relative;
 			display: block;
 			height:unset;
 			max-height:12%;
@@ -55,7 +64,7 @@ div#renderer {
 			-webkit-transition: -webkit-transform 1s ease-in-out;
 			transform: translateY(0);
 			-webkit-transform: translateY(0);
-			z-index: 3;	
+			z-index: 6;	
 			
 			&.hidden {
 				transform: translateY(100%);
@@ -69,9 +78,10 @@ div#bgrs {
 	position: absolute;
 	top: 0px;
 	z-index: 1;
-	opacity: 0;
 	
 	img {
+		position: relative;
+		z-index: 1;
 		max-height: 100%;
 		width: 100%;
 	}
